--- a/asgn0/src/asg0.html
+++ b/asgn0/src/asg0.html
@@ -13,7 +13,7 @@
         Please use a browser that supports "canvas"
     </canvas>
 
-    <script src="lib/cuon-matrix-cse160.js"></script>
+    <script src="../lib/cuon-matrix-cse160.js"></script>
     
     <script src="asg0.js"></script>
 
