--- a/asgn2/src/BlockyAnimal.html
+++ b/asgn2/src/BlockyAnimal.html
@@ -67,7 +67,7 @@
       <button type="button" id="animationOffMouth">OFF</button>
       <br>
     </div>
-    <p>Used github copilot and gemini</p>
+    <p>Deniz Yaralioglu<br>dyaralio<br>Used github copilot and gemini</p>
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
