--- a/asgn3/src/world.html
+++ b/asgn3/src/world.html
@@ -69,7 +69,7 @@
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
-    <script src="../../asgn0/lib/cuon-matrix-cse160.js"></script>
+    <script src="../lib/cuon-matrix-cse160.js"></script>
     <script src="Triangle.js"></script>
     <script src="Cone.js"></script>
     <script src="Cube.js"></script>
